[package]
name = "kasplex-reth-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde", "alloy-hardforks/serde"]

[dependencies]
alloy-chains = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-genesis = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
auto_impl = { workspace = true }
eyre = { workspace = true }
reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-cli" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-ethereum-forks" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-evm" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-network-peers" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-trie-common" }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }


