[package]
name = "kasplex-reth-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-consensus = { path = "../consensus" }
kasplex-reth-node = { path = "../node" }
reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-cli" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-cli-commands" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-cli-util" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-builder" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-tracing" }
tracing = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
alloy-consensus = { workspace = true }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-db" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-ethereum-forks" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-api" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-ethereum" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-storage-api" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-ethereum" }

