[package]
name = "kasplex-reth-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-chainspec = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
eyre = { workspace = true }
reth = { workspace = true }
reth-ethereum = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-provider = { workspace = true }

