[package]
name = "kasplex-reth-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-chainspec = { workspace = true }
alloy-evm = { workspace = true }
alloy-primitives = { workspace = true }
reth = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-ethereum-forks = { workspace = true }
reth-primitives = { workspace = true }
reth-revm = { workspace = true }
revm-database-interface = { workspace = true }
revm-primitives = { workspace = true }
tracing = { workspace = true }

