[package]
name = "kasplex-reth-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-chainspec = { workspace = true }
eyre = { workspace = true }
reth = { workspace = true }
reth-ethereum = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-transaction-pool = { workspace = true }
tracing = { workspace = true }

