[package]
name = "kasplex-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-block = { path = "../block" }
kasplex-reth-chainspec = { path = "../chainspec" }
kasplex-reth-consensus = { path = "../consensus" }
kasplex-reth-network = { path = "../network" }
kasplex-reth-payload = { path = "../payload" }
kasplex-reth-primitives = { path = "../primitives" }
kasplex-reth-rpc = { path = "../rpc" }
kasplex-reth-tx-mapping = { path = "../tx_mapping" }
kasplex-reth-txpool = { path = "../txpool" }
reth = { workspace = true }
reth-ethereum = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-provider = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-rpc = { workspace = true }
tokio-stream = { version = "0.1", features = [] }
tracing = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-primitives = { workspace = true }

