[package]
name = "kasplex-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-block = { path = "../block" }
kasplex-reth-chainspec = { path = "../chainspec" }
kasplex-reth-consensus = { path = "../consensus" }
kasplex-reth-network = { path = "../network" }
kasplex-reth-payload = { path = "../payload" }
kasplex-reth-primitives = { path = "../primitives" }
kasplex-reth-rpc = { path = "../rpc" }
kasplex-reth-tx-mapping = { path = "../tx_mapping" }
kasplex-reth-txpool = { path = "../txpool" }
reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-ethereum" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-api" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-builder" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-ethereum" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-provider" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-engine-primitives" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-ethereum-primitives" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-rpc" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-primitives-traits" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-payload-primitives" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-engine-local" }
tokio-stream = { version = "0.1", features = [] }
tracing = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-primitives = { workspace = true }

