[package]
name = "kasplex-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-block = { workspace = true }
kasplex-reth-chainspec = { workspace = true }
kasplex-reth-consensus = { workspace = true }
kasplex-reth-network = { workspace = true }
kasplex-reth-payload = { workspace = true }
kasplex-reth-primitives = { workspace = true }
kasplex-reth-rpc = { workspace = true }
kasplex-reth-tx-mapping = { workspace = true }
kasplex-reth-txpool = { workspace = true }
reth = { workspace = true }
reth-ethereum = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-provider = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-rpc = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-engine-local = { workspace = true }
tokio-stream = { version = "0.1", features = [] }
tracing = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-primitives = { workspace = true }

