[package]
name = "kasplex-reth-payload"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-block = { workspace = true }
kasplex-reth-chainspec = { workspace = true }
kasplex-reth-primitives = { workspace = true }
kasplex-reth-tx-mapping = { workspace = true }
reth = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-ethereum-forks = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-node-api = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-provider = { workspace = true }
reth-transaction-pool = { workspace = true }
alloy-consensus = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }

