[package]
name = "kasplex-reth-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
client = []

[dependencies]
kasplex-reth-block = { path = "../block" }
kasplex-reth-chainspec = { path = "../chainspec" }
kasplex-reth-primitives = { path = "../primitives" }
kasplex-reth-tx-mapping = { path = "../tx_mapping" }
kasplex-reth-txpool = { path = "../txpool" }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-txpool = { workspace = true }
async-trait = { workspace = true }
eyre = { workspace = true }
jsonrpsee = { workspace = true }
jsonrpsee-types = { workspace = true }
reth = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-engine-tree = { workspace = true }
reth-ethereum = { workspace = true }
reth-evm = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-provider = { workspace = true }
reth-rpc = { workspace = true }
reth-rpc-builder = { workspace = true }
reth-rpc-eth-api = { workspace = true }
reth-rpc-eth-types = { workspace = true }
reth-rpc-engine-api = { workspace = true }
reth-node-core = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-rpc-types = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-transaction-pool = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }