[package]
name = "kasplex-reth-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
client = []

[dependencies]
kasplex-reth-block = { path = "../block" }
kasplex-reth-chainspec = { path = "../chainspec" }
kasplex-reth-primitives = { path = "../primitives" }
kasplex-reth-tx-mapping = { path = "../tx_mapping" }
kasplex-reth-txpool = { path = "../txpool" }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-txpool = { workspace = true }
async-trait = { workspace = true }
eyre = { workspace = true }
jsonrpsee = { workspace = true }
jsonrpsee-types = { workspace = true }
reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-engine-primitives" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-engine-tree" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-ethereum" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-evm" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-api" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-builder" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-ethereum" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-payload-primitives" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-primitives-traits" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-provider" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-rpc" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-rpc-builder" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-rpc-eth-api" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-rpc-eth-types" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-rpc-engine-api" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-node-core" }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-rpc-types = { workspace = true }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-ethereum-engine-primitives" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-transaction-pool" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-trie-db" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }