[package]
name = "kasplex-reth-tx-mapping"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alloy-primitives = { workspace = true }
tokio = { version = "1", features = ["sync"] }
tracing = { workspace = true }

